@@ -1,19 +1,0 @@
-This is the Guile documentation module, a work-in-progress.  It
-includes information from many sources written at many different
-stages of Guile's development, and is therefore in a state of some
-confusion.
-
-The `ref' directory contains the Guile reference manual, in progress.
-
-The `tutorial' directory contains the Guile user tutorial, in progress.
-
-The `sources' directory includes some stuff relevant to the Guile
-reference manual, and which may eventually be folded in to it.  It's
-not immediately relevant, however, which is why it's not in the ref
-directory.
-
-The `old' directory is documentation from the Guile 1.0 distribution.
-This has been wildly overhauled and is generally out of date, but
-we're keeping it around until the new Guile reference and tutorial
-manual are reasonably stable.
-
