@@ -1,3 +1,8 @@
+2001-03-09  Neil Jerram  <neil@ossau.uklinux.net>
+
+	* configure.in (htmldoc): Merge handling of `--enable-htmldoc'
+	option from guile-doc/configure.in.
+
 2001-03-06  Dirk Herrmann  <D.Herrmann@tu-bs.de>
 
 	* libguile.h: Removed #include "libguile/dump.h".
